Some small text fixes + fix links to contact with me

--- a/index.html
+++ b/index.html
@@ -93,7 +93,8 @@
                     View <a href="#portfolio" class="smoothscroll">My Works</a>
                   </li>
                   <li class="animate-intro">
-                    Contact <a href="#contact" class="smoothscroll">By Email</a>
+                    Contact
+                    <a href="#contact" class="smoothscroll">My Contacts</a>
                   </li>
                 </ul>
               </div>
@@ -887,7 +888,13 @@
         <div class="col-six tab-full collapse">
           <h5 class="animate-this">Email Me At</h5>
 
-          <p class="animate-this">kostiantyn.demchenko.work@gmail.com</p>
+          <p>
+            <a
+              class="animate-this"
+              href="mailto:kostiantyn.demchenko.work@gmail.com"
+              >kostiantyn.demchenko.work@gmail.com</a
+            >
+          </p>
           <a href="https://kostyademchenko.github.io/Partfolio/">My Site</a>
         </div>
         <!-- end col-four -->
@@ -895,7 +902,9 @@
         <div class="col-six tab-full">
           <h5 class="animate-this">Call Me At</h5>
 
-          <p class="animate-this">Mobile: (+380) 98 912 29 46<br /></p>
+          <p class="animate-this">
+            <a href="tel:+380989122946">Mobile: (+380) 98 912 29 46</a><br />
+          </p>
         </div>
         <!-- end col-four -->
       </div>
