--- a/index.html
+++ b/index.html
@@ -128,37 +128,27 @@
             <h1 class="animate-this">More About Me.</h1>
 
             <p class="lead animate-this">
-              Let me to introduce myself; my name is Konstantin, and I am a
-              Front-End/Web Developer hailing from the vibrant city of Kharkiv.
-              At the age of 20, I bring to the table a year's worth of
-              experience in the field, marked by a continuous pursuit of
-              excellence and a commitment to staying abreast of industry trends.
+              Good afternoon, I am writing to introduce myself - my name is
+              Konstantin, and I am a 20-year-old Front-End/Web developer from
+              Kharkiv. I have been working in this field for a year and a half,
+              during which time I have mastered Next.js, React, TypeScript,
+              JavaScript, MySQL, JQuery, Tailwind/SCSS/CSS, Bootstrap 5, HTML,
+              Git, Node.js and the basics of popular frameworks. Currently, I am
+              actively working with TypeScript/JavaScript, Next.js/React.
             </p>
             <p class="animate-this">
-              My journey in the realm of development began as a Web Designer, a
-              role that equipped me with a keen eye for design intricacies and
-              proficiency in tools like Figma, Photoshop, and Illustrator. This
-              background has proved invaluable in grasping project nuances
-              swiftly, enhancing my effectiveness as a developer.
+              I have about a year of experience as a Front End developer, more
+              details about which you can find in my attached resume.
+              Previously, I worked as a web designer, which allowed me to be
+              fluent in Figma, Photoshop, and Illustrator. I also get to grips
+              with projects quickly, which is an important aspect of my job.
             </p>
 
             <p class="animate-this">
-              In terms of professional experience, I have dedicated
-              approximately a year to honing my skills as a Front-End developer.
-              Further details regarding my tenure can be found in the enclosed
-              resume. Beyond technical prowess, I pride myself on attributes
-              such as reliability, punctuality, resilience under pressure,
-              adaptability, and strong interpersonal skills. These qualities, I
-              believe, position me as a valuable addition to any team or
+              Among my soft skills, I would list the following: responsible,
+              punctual, stress-resistant, quick learner, and very sociable. I
+              believe these qualities make me a valuable asset to any team or
               project.
-            </p>
-
-            <p class="animate-this">
-              Previously, my technological toolkit encompassed HTML, CSS,
-              JS/JQuery. However, in my quest for growth and efficiency, I have
-              transitioned to a more robust stack, currently leveraging TS/JS
-              Next, React, VUE 3, CSS/SCSS/Tailwind, along with several other
-              JavaScript libraries.
             </p>
           </div>
 
@@ -168,7 +158,7 @@
             >Contact Me</a
           >
           <a
-            href="./assets/files/cv/Demcehenko Kostiantyn_CV (ENG).pdf"
+            href="./assets/files/cv/Demcehenko Kostiantyn_CV_(ENG).pdf"
             class="button button-primary full-width animate-this"
             download
             >Download CV (ENG)</a
