Updating my Career

--- a/index.html
+++ b/index.html
@@ -305,7 +305,44 @@
                 <i class="fa fa-briefcase"></i>
               </div>
               <div class="timeline-header">
-                <p class="timeframe">November 2023 - April 2023</p>
+                <p class="timeframe">Oct 2023 - Mar 2024</p>
+                <h3>Outside Officialy</h3>
+                <a href="https://www.outside-official.com">Link</a>
+                <h4>Front-End Developer/Team Lead</h4>
+              </div>
+              <div class="timeline-desc">
+                <p>
+                  Creation from 0 of an ecosystem of 2 sites “Admin panel”,
+                  “Main site” and backend (more details in cv).
+                </p>
+              </div>
+            </div>
+            <!-- end timeline-block -->
+
+            <div class="timeline-block animate-this">
+              <div class="timeline-ico">
+                <i class="fa fa-briefcase"></i>
+              </div>
+              <div class="timeline-header">
+                <p class="timeframe">Feb 2023 - Aug 2023</p>
+                <h3>BonnyFlowers</h3>
+                <h4>Front-End Developer</h4>
+              </div>
+              <div class="timeline-desc">
+                <p>
+                  Creation of the entire visual part (design + layout) for a
+                  flower sales website (more details in cv).
+                </p>
+              </div>
+            </div>
+            <!-- end timeline-block -->
+
+            <div class="timeline-block animate-this">
+              <div class="timeline-ico">
+                <i class="fa fa-briefcase"></i>
+              </div>
+              <div class="timeline-header">
+                <p class="timeframe">Nov 2023 - Apr 2023</p>
                 <h3>Hilell</h3>
                 <h4>Front-end Developer Pro</h4>
               </div>
@@ -325,7 +362,7 @@
                 <i class="fa fa-briefcase"></i>
               </div>
               <div class="timeline-header">
-                <p class="timeframe">May 2022 - August 2022</p>
+                <p class="timeframe">May 2022 - Aug 2022</p>
                 <h3>Freelance</h3>
                 <h4>Junior Front-End Developer</h4>
               </div>
@@ -348,7 +385,7 @@
                 <i class="fa fa-briefcase"></i>
               </div>
               <div class="timeline-header">
-                <p class="timeframe">April 2022 - May 2022</p>
+                <p class="timeframe">Apr 2022 - May 2022</p>
                 <h3>Lemon School</h3>
                 <h4>FRONT-END COURSE (HTML/CSS +JS)</h4>
               </div>
