--- a/index.html
+++ b/index.html
@@ -270,7 +270,13 @@
               <strong>JQuery</strong>
             </li>
             <li class="animate-this" data-animate="fadeInRight">
-              <strong>Rest API</strong>
+              <strong>Node.js</strong>
+            </li>
+            <li class="animate-this" data-animate="fadeInRight">
+              <strong>MySQL</strong>
+            </li>
+            <li class="animate-this" data-animate="fadeInRight">
+              <strong>Figma</strong>
             </li>
           </ul>
         </div>
