updating all img type from jpg/png -> webp

--- a/index.html
+++ b/index.html
@@ -461,12 +461,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Outside_Official_Site.png"
+                data-src="images/portfolio/gallery/Outside_Official_Site.webp"
                 data-sub-html="#13"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Outside_Official_Site.png"
+                    src="images/portfolio/Outside_Official_Site.webp"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -497,12 +497,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Official_Admin_Panel.png"
+                data-src="images/portfolio/gallery/Official_Admin_Panel.webp"
                 data-sub-html="#12"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Official_Admin_Panel.png"
+                    src="images/portfolio/Official_Admin_Panel.webp"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -535,12 +535,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/emailListMerch.png"
+                data-src="images/portfolio/gallery/emailListMerch.webp"
                 data-sub-html="#11"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/emailListMerch.png"
+                    src="images/portfolio/emailListMerch.webp"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -573,11 +573,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/to_do_list.png"
+                data-src="images/portfolio/gallery/to_do_list.webp"
                 data-sub-html="#10"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/to_do_list.png" alt="Bicycle" />
+                  <img src="images/portfolio/to_do_list.webp" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types"> Js Development </span>
                     <h3 class="folio-title">To Do</h3>
@@ -608,11 +608,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/BonnyFlowers.png"
+                data-src="images/portfolio/gallery/BonnyFlowers.webp"
                 data-sub-html="#09"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/BonnyFlowers.png" alt="Bicycle" />
+                  <img src="images/portfolio/BonnyFlowers.webp" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types">Web Development</span>
                     <h3 class="folio-title">Bonny Flowers</h3>
@@ -643,12 +643,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Bin-packing-problem.png"
+                data-src="images/portfolio/gallery/Bin-packing-problem.webp"
                 data-sub-html="#08"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Bin-packing-problem.png"
+                    src="images/portfolio/Bin-packing-problem.webp"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -681,12 +681,12 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Currency_Converter.jpg"
+                data-src="images/portfolio/gallery/Currency_Converter.webp"
                 data-sub-html="#07"
               >
                 <a href="#" class="overlay">
                   <img
-                    src="images/portfolio/Currency_Converter.jpg"
+                    src="images/portfolio/Currency_Converter.webp"
                     alt="Bicycle"
                   />
                   <div class="item-text">
@@ -721,11 +721,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Weather-app.jpg"
+                data-src="images/portfolio/gallery/Weather-app.webp"
                 data-sub-html="#06"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/Weather-app.jpg" alt="Bicycle" />
+                  <img src="images/portfolio/Weather-app.webp" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types">
                       Web Development (using API)
@@ -758,11 +758,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/Lemon-School.jpg"
+                data-src="images/portfolio/gallery/Lemon-School.webp"
                 data-sub-html="#05"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/Lemon-School.jpg" alt="Bicycle" />
+                  <img src="images/portfolio/Lemon-School.webp" alt="Bicycle" />
                   <div class="item-text">
                     <span class="folio-types"> Web Development\Design </span>
                     <h3 class="folio-title">Lemon School</h3>
@@ -793,11 +793,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/IKEA.jpg"
+                data-src="images/portfolio/gallery/IKEA.webp"
                 data-sub-html="#01"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/IKEA.jpg" alt="IKEA" />
+                  <img src="images/portfolio/IKEA.webp" alt="IKEA" />
                   <div class="item-text">
                     <span class="folio-types"> Web Development </span>
                     <h3 class="folio-title">IKEA</h3>
@@ -828,11 +828,11 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/MasterTao.jpg"
+                data-src="images/portfolio/gallery/MasterTao.webp"
                 data-sub-html="#03"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/MasterTao.jpg" alt="MasterTao" />
+                  <img src="images/portfolio/MasterTao.webp" alt="MasterTao" />
                   <div class="item-text">
                     <span class="folio-types"> Web Development </span>
                     <h3 class="folio-title">Master Tao</h3>
@@ -863,11 +863,14 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
-                data-src="images/portfolio/gallery/WarmPlace.jpg"
+                data-src="images/portfolio/gallery/WarmPlace.webp"
                 data-sub-html="#04"
               >
                 <a href="#" class="overlay">
-                  <img src="images/portfolio/WarmPlace.jpg" alt="Minimalismo" />
+                  <img
+                    src="images/portfolio/WarmPlace.webp"
+                    alt="Minimalismo"
+                  />
                   <div class="item-text">
                     <span class="folio-types"> Web Development </span>
                     <h3 class="folio-title">Warm place</h3>
