Custom scroll bar; added skill

--- a/index.html
+++ b/index.html
@@ -276,6 +276,9 @@
               <strong>MySQL</strong>
             </li>
             <li class="animate-this" data-animate="fadeInRight">
+              <strong>Docker</strong>
+            </li>
+            <li class="animate-this" data-animate="fadeInRight">
               <strong>Figma</strong>
             </li>
           </ul>
