Site title update

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <!--- basic page needs
    ================================================== -->
     <meta charset="utf-8" />
-    <title>My Portfoio</title>
+    <title>Kostiantyn Demchenko Portfoio</title>
     <meta name="description" content="" />
     <meta name="author" content="" />
 
@@ -80,7 +80,7 @@
               <div class="home-bottom-text">
                 <h3 class="animate-intro">Hello, World.</h3>
                 <h1 class="animate-intro">
-                  I am Demchenko Kostya. <br />
+                  I am Demchenko Kostiantyn. <br />
                   Front-End Developer;<br />
                   Based in Ukraine, Kharkiv/Kiev.
                 </h1>
