--- a/index.html
+++ b/index.html
@@ -1,40 +1,34 @@
 <!DOCTYPE html>
 <html class="no-js" lang="en">
   <head>
-    <!--- basic page needs
-   ================================================== -->
+    <!-- basic page needs -->
     <meta charset="utf-8" />
     <title>Kostiantyn Demchenko Portfoio</title>
-    <meta name="description" content="" />
-    <meta name="author" content="" />
+    <meta name="description" content="Demchenko Kostiantyn Partfolio" />
+    <meta name="author" content="Kostiantyn Demchenko" />
 
-    <!-- mobile specific metas
-   ================================================== -->
+    <!-- mobile specific metas -->
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1, maximum-scale=1"
     />
 
-    <!-- CSS
-   ================================================== -->
+    <!-- CSS -->
     <link rel="stylesheet" href="css/base.css" />
     <link rel="stylesheet" href="css/vendor.css" />
     <link rel="stylesheet" href="css/main.css" />
 
-    <!-- script
-   ================================================== -->
+    <!-- script -->
     <script src="js/modernizr.js"></script>
     <script src="js/pace.min.js"></script>
 
-    <!-- favicons
-	================================================== -->
+    <!-- favicons -->
     <link rel="shortcut icon" href="favicon.svg" type="image/x-icon" />
     <link rel="icon" href="favicon.svg" type="image/x-icon" />
   </head>
 
   <body id="top">
-    <!-- header 
-   ================================================== -->
+    <!-- header  -->
     <header>
       <div class="header-logo">
         <a href="index.html">Demchenko Kostiantyn</a>
@@ -67,8 +61,7 @@
     </header>
     <!-- end header -->
 
-    <!-- home
-   ================================================== -->
+    <!-- home -->
     <section id="home">
       <div class="overlay"></div>
       <div class="gradient-overlay"></div>
@@ -114,8 +107,7 @@
     </section>
     <!-- end home -->
 
-    <!-- about
-   ================================================== -->
+    <!-- about -->
     <section id="about">
       <div class="about-profile-bg"></div>
 
@@ -224,8 +216,7 @@
     </section>
     <!-- end about -->
 
-    <!-- about
-   ================================================== -->
+    <!-- about -->
     <section id="skills">
       <div class="overlay"></div>
       <div class="gradient-overlay"></div>
@@ -289,8 +280,7 @@
     </section>
     <!-- end skills -->
 
-    <!-- credentials
-   ================================================== -->
+    <!-- credentials -->
     <section id="credentials">
       <div class="row narrow section-intro with-bottom-sep">
         <div class="col-twelve">
@@ -447,8 +437,7 @@
     </section>
     <!-- end credentials -->
 
-    <!-- portfolio
-   ================================================== -->
+    <!-- portfolio -->
     <section id="portfolio">
       <div class="row narrow section-intro with-bottom-sep">
         <div class="col-twelve">
@@ -909,8 +898,7 @@
     </section>
     <!-- end portfolio -->
 
-    <!-- contact
-   ================================================== -->
+    <!-- contact -->
     <section id="contact">
       <div class="overlay"></div>
 
@@ -951,8 +939,7 @@
     </section>
     <!-- end contact -->
 
-    <!-- footer
-   ================================================== -->
+    <!-- footer -->
     <footer>
       <div class="row">
         <div class="col-twelve tab-full social">
