Added AiGo site

--- a/index.html
+++ b/index.html
@@ -453,6 +453,39 @@
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/aigo-full.webp"
+                data-sub-html="#14"
+              >
+                <a href="#" class="overlay">
+                  <img src="images/portfolio/aigo.webp" alt="Bicycle" />
+                  <div class="item-text">
+                    <span class="folio-types"> Next Development </span>
+                    <h3 class="folio-title">Ai Go</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://github.com/KostyaDemchenko/ai_go"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="14" class="hide">
+                <h4>Ai Go Site</h4>
+                <a href="https://ai-go-ua.vercel.app/" class="details-link"
+                  >Vive site</a
+                >
+                <p>Next.js, React, Ts, SCSS, Notion</p>
+              </div>
+            </div>
+            <!-- end folio-item -->
+
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
                 data-src="images/portfolio/gallery/Outside_Official_Site.webp"
                 data-sub-html="#13"
               >
