--updated: added tap-skins in expiriense

--- a/index.html
+++ b/index.html
@@ -264,10 +264,16 @@
               <strong>Node.js</strong>
             </li>
             <li class="animate-this" data-animate="fadeInRight">
-              <strong>MySQL</strong>
+              <strong>SQL</strong>
             </li>
             <li class="animate-this" data-animate="fadeInRight">
               <strong>Docker</strong>
+            </li>
+            <li class="animate-this" data-animate="fadeInRight">
+              <strong>Express</strong>
+            </li>
+            <li class="animate-this" data-animate="fadeInRight">
+              <strong>PM2</strong>
             </li>
             <li class="animate-this" data-animate="fadeInRight">
               <strong>Figma</strong>
@@ -450,6 +456,39 @@
       <div class="row portfolio-content">
         <div class="col-twelve">
           <div id="folio-wrap" class="bricks-wrapper">
+            <div class="brick folio-item">
+              <div
+                class="item-wrap animate-this"
+                data-src="images/portfolio/gallery/Tap-skins.webp"
+                data-sub-html="#15"
+              >
+                <a href="#" class="overlay">
+                  <img src="images/portfolio/Tap-skins.webp" alt="Tap-skins" />
+                  <div class="item-text">
+                    <span class="folio-types"> Full-stack Development </span>
+                    <h3 class="folio-title">Tap Skins</h3>
+                  </div>
+                </a>
+                <a
+                  href="https://tap-skins.pro"
+                  class="details-link"
+                  title="details"
+                >
+                  <i class="icon-UpRightArrow"></i>
+                </a>
+              </div>
+              <!-- end item-wrap -->
+
+              <div id="15" class="hide">
+                <h4>Tap Skins Telegram mini app</h4>
+                <a href="https://tap-skins.pro" class="details-link"
+                  >Vive site</a
+                >
+                <p>Next.js, React, Ts, SCSS, Notion, Maria DB, Express</p>
+              </div>
+            </div>
+            <!-- end brick -->
+
             <div class="brick folio-item">
               <div
                 class="item-wrap animate-this"
